5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1643_2447.log
== TEST (2019-04-08 14:13:54) 
-- CODE:
p_1=float(input("p_1:"))
pag=float(input("pag:"))
if(p_1>pag):
	mensagem=("Falta", p_1-pag)
	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:16:25) 
-- CODE:
p_1=float(input("p_1:"))
pag=float(input("pag:"))
if(p_1>pag):
	mensagem=("Falta", p_1-pag)
else:
	mensagem=("Troco", pag-p_1)
print(mensagem)
	
-- OUTPUT:
('Falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:17:07) 
-- CODE:
p_1=float(input("p_1:"))
pag=float(input("pag:"))
if(p_1>pag):
	mensagem=("Falta" p_1-pag)
else:
	mensagem=("Troco de" pag-p_1)
print(mensagem)
	
-- ERROR:
File "XXXX", line 4
    mensagem=("Falta" p_1-pag)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:17:32) 
-- CODE:
p_1=float(input("p_1:"))
pag=float(input("pag:"))
if(p_1>pag):
	mensagem=("Falta"+ p_1-pag)
else:
	mensagem=("Troco de"+ pag-p_1)
print(mensagem)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem=("Falta"+ p_1-pag)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:18:09) 
-- CODE:
p_1=float(input("p_1:"))
pag=float(input("pag:"))
if(p_1>pag):
	mensagem=("Falta" , p_1-pag)
else:
	mensagem=("Troco de" , pag-p_1)
print(mensagem)
	
-- OUTPUT:
('Falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:00:20) 
-- CODE:
p_1=float(input("p_1:"))
pag=float(input("pag:"))
if(p_1>pag):
	mensagem=("Falta")
	cont=(p_1-pag)
else:
	mensagem=("Troco de")
	cont=(pag-p_1)
print(mensagem)
	
-- OUTPUT:
Falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:00:32) 
-- CODE:
p_1=float(input("p_1:"))
pag=float(input("pag:"))
if(p_1>pag):
	mensagem=("Falta")
	cont=(p_1-pag)
else:
	mensagem=("Troco de")
	cont=(pag-p_1)
print(mensagem)
	
-- EXECUTION TIME:
0.197759
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:01:05) 
-- CODE:
p_1=float(input("p_1:"))
pag=float(input("pag:"))
if(p_1>pag):
	mensagem=("Falta")
	cont=(p_1-pag)
else:
	mensagem=("Troco de")
	cont=(pag-p_1)
print(round(mensagem, 2))
	
-- EXECUTION TIME:
0.116926
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 9, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:01:30) 
-- CODE:
p_1=float(input("p_1:"))
pag=float(input("pag:"))
if(p_1>pag):
	mensagem=("Falta")
	cont=(p_1-pag)
else:
	mensagem=("Troco de")
	cont=(pag-p_1)
print(round(cont, 2))
	
-- EXECUTION TIME:
0.133177
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:01:35) 
-- CODE:
p_1=float(input("p_1:"))
pag=float(input("pag:"))
if(p_1>pag):
	mensagem=("Falta")
	cont=(p_1-pag)
else:
	mensagem=("Troco de")
	cont=(pag-p_1)
print(round(cont, 2))
	
-- EXECUTION TIME:
0.15352
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:01:42) 
-- CODE:
p_1=float(input("p_1:"))
pag=float(input("pag:"))
if(p_1>pag):
	mensagem=("Falta")
	cont=(p_1-pag)
else:
	mensagem=("Troco de")
	cont=(pag-p_1)
print(round(cont, 2))
	
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:02:17) 
-- CODE:
p_1=float(input("p_1:"))
pag=float(input("pag:"))
if(p_1>pag):
	mensagem=("Falta")
	cont=(p_1-pag)
else:
	mensagem=("Troco de")
	cont=(pag-p_1)
print(mensagem,round(cont, 2))
	
-- EXECUTION TIME:
0.198671
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
